fix: spacing in article list

--- a/src/style/modules/section/section.archive.scss
+++ b/src/style/modules/section/section.archive.scss
@@ -114,7 +114,7 @@
         &__tags {
           display: flex;
           align-items: center;
-          justify-content: flex-end;
+          justify-content: flex-start;
           text-align: center;
           padding: 0;
           opacity: 0.25;
@@ -169,10 +169,8 @@
         }
         &__link {
           width: 100%;
-          @media #{breakpoint(medium)} {
-            & + #{$archive}__tags {
-              margin-top: 0.5em;
-            }
+          & + #{$archive}__tags {
+            margin-top: 0.5em;
           }
         }
       }
